smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/conflicting-trait-def.smithy
// Shape name `deprecated` conflicts with imported shape `smithy.api#deprecated`
namespace smithy.example

use smithy.api#deprecated

@trait
structure deprecated {}
